--- a/index.html
+++ b/index.html
@@ -321,6 +321,6 @@ mjx-container { break-inside: avoid; }
 </style><title>index</title>
 </head>
 <body class='typora-export'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='it-seems-like-you-are-lost'><span>It seems like you are lost...</span></h1><p><span>Here is the list of articles you may be looking for:</span></p><ul><li><p><a href='./DMES2025/students-guide-python-jupyter.html'><span>A Student&#39;s Guide to Setting Up Your Python and Jupyter Notebook Environment</span></a></p></li></ul></div></div>
+<div id='write'  class=''><h1 id='it-seems-like-you-are-lost'><span>It seems like you are lost...</span></h1><p><span>Here is the list of articles you may be looking for:</span></p><ul><li><p><a href='./DMES2025/students-guide-python-jupyter.html'><span>A Student&#39;s Guide to Setting Up Your Python and Jupyter Notebook Environment</span></a></p></li><li><p><a href='../DMES2025/beginners-guide-using-Jupyter.html'><span>A Beginner&#39;s Guide to Using Jupyter Notebooks: from Colab to VS Code</span></a></p></li></ul><p>&nbsp;</p></div></div>
 </body>
 </html>
